--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
     <div id="lead">
         <div id="lead-content">
-	    <img src="/images/passport-new.png" class="circle img-responsive profile-pic" alt="avatar">
+	    <img src="/portfolio/images/passport-new.png" class="circle img-responsive profile-pic" alt="avatar">
             <h1>Yashica Saun</h1>
             <h2>Data Scientist, Web Developer</h2>
             <a href="#" class="btn-rounded-white">Download Resume</a>
