fixing broken links

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <div>
                 <h1>Yashica Saun</h1>
                 <h2>Data Scientist, Web Developer</h2>
-                <a href='Yashica_Saun_CV (1).pdf' class="btn-rounded-white" target="_blank" >Download Resume</a>
+                <a href='CV_Yashica Saun.pdf' class="btn-rounded-white" target="_blank" >Download Resume</a>
                 <br/>
                 <br/>
                 <div class="socials">
@@ -228,7 +228,7 @@
                             For feature extraction, I compared CountVectorizer, TfidfVectoriser in combination with TfidfTransformer.
                             I then built a sklearn pipeline to compare models such as - MultinomialNB, RandomForestClassifer and LogisticRegression. 
                         </p>
-                        <a href="#">https://www.kaggle.com/code/yashicasaun/sms-spam-prediction-nlp</a>
+                        <a href="https://www.kaggle.com/code/yashicasaun/sms-spam-prediction-nlp" target="_blank">https://www.kaggle.com/code/yashicasaun/sms-spam-prediction-nlp</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
@@ -243,7 +243,7 @@
                         <p>
                             Classification task using Naive Bayes, Logistic Regression and KNN Classifier.
                         </p>
-                        <a href="#">https://www.kaggle.com/code/yashicasaun/heart-attack-prediction-multiple-models</a>
+                        <a href="https://www.kaggle.com/code/yashicasaun/heart-attack-prediction-multiple-models" target="_blank">https://www.kaggle.com/code/yashicasaun/heart-attack-prediction-multiple-models</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
@@ -260,7 +260,7 @@
                             <br/>
                             Skills: MERN Stack - Mongo, Express, React, Node and REST APIs;
                         </p>
-                        <a href="#">https://github.com/Yashicasaun/TutorMe</a>
+                        <a href="https://github.com/Yashicasaun/TutorMe" target="_blank">https://github.com/Yashicasaun/TutorMe</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
